-----

0.77  to be released
    [Changed]
       - Even more compact storage of language definitions
    [Fixed]
       - With `prove`, no location details are reported (as they are with
         regular Test::More tests), unless run in verbose mode which includes
         all non-failing output too (gh #176)
       - Require YAML v1.15 to fix failures seen on cpantesters
       - No exit status reported for tests run by the `prove` integration
0.76  2021-02-07
    [Added]
       - Mention the `--strict` option for `pherkin` in SYNOPSIS
       - Added deprecation warning to 'data' accessor in
         Test::BDD::Cucumber::Model::Scenario
    [Fixed]
       - Warnings when processing empty feature files or files without
         a text after the `Feature:` keyword
       - Feature and scenario descriptions missing space on concatenated lines
       - Location of failed test in TAP output now points to the failed step,
         instead of somewhere inside `TAP::Harness`
    [Changed]
       - Scenarios defined by a scenario outline (`Examples:`) are now
         independent as in Cucumber; before, failure of a scenario in an
         outline would cancel all subsequent steps *and* scenarios -- now
         only steps are cancelled (skipped), but subsequent scenarios are
         run (gh #123)
       - Descriptions of tests no longer contain prefixed 'In '
       - Dependency YAML::Syck switched to YAML (which wraps YAML::XS or
         YAML::PP, whichever is available); YAML has 3x more dependencies
         on CPAN, increasing chances of prior availability
       - Language definitions now stored as Perl instead of JSON for
         compactness and load speed
    [Removed]
       - Dependencies on Clone, List::MoreUtils, Number::Range
0.75  2020-12-28
    [Fixed]
       - Passing multiple tags arguments to prove correctly intersects
         the sets;
         e.g. '--feature-option tags=@wip --feature-option tags=@daily' now